# tvm_tensorrt

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/Modules/: FindOpenCV.cmake  FindTensorRT.cmake
include/: engine.h  inference.h  labels.h  macro.h
python/: build_engine.py  evaluate.py  export_models.py  print_tasks.py  trt_evaluate.py  tune_resnet.py
src/: CMakeLists.txt  engine.cc  inference.cc  tvm_inference.cc  vanilla_trt.cc
